--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sagbot",
   "version": "1.0.0",
   "description": "Mon bot ",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,8 +17,11 @@
   },
   "homepage": "https://github.com/Sagbyy/Sagbot#readme",
   "dependencies": {
-    "discord.js": "^14.10.2",
-    "dotenv": "^16.0.3"
+    "@discordjs/builders": "^1.7.0",
+    "discord-api-types": "^0.37.66",
+    "discord.js": "^14.14.1",
+    "dotenv": "^16.0.3",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "eslint": "^8.39.0"
